--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-pandas==1.5.3
-numpy==1.24.4
-ortools==9.6.2534
-oracledb==2.0.0
+pandas==2.3.3
+numpy==2.3.5
+ortools==9.14.6206
+oracledb==3.4.1
 typing-extensions>=4.13.2
-cryptography==42.0.8
+cryptography==46.0.3
+gurobipy==13.0.0
